--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
+/* src/App.css */
+@import url("https://fonts.googleapis.com/css?family=Lato:100");
+
+body {
+  font-family: "Lato", thin;
+  margin: 20px;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: chocolate;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form {
+  display:list-item;
+  margin-top: 20px;
+}
+
+input[type="text"] {
+  flex: 1;
+  padding: 8px;
+  font-size: 16px;
+  background: none;
+  border: white solid 1px;
+  position: relative;
+  right: 15px;
+}
+
+button {
+  padding: 8px 16px;
+  font-size: 16px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  background: none;
+  border: white solid 1px;
+  border-radius: 20px
+}
+
+
+button:hover {
+  background-color: white;
+  color: chocolate
+}
+
+.task {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #f9f9f9;
+  padding: 8px;
+  border-radius: 4px;
+  margin-bottom: 8px;
+}
+
+.task h3 {
+  flex: 1;
+  margin: 0;
+  cursor: pointer;
+}
+
+.task button {
+  margin-left: 8px;
+  background-color: #f44336;
+}
+
+.task.completed {
+  background-color: #e5ffe5;
+  text-decoration: line-through;
 }
